--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,11 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+
+      - name: Current date time
+        run: |
+          date
+
+      - name: Directory content
+        run: |
+          ls -l
