fix: lint errors

--- a/package.json
+++ b/package.json
@@ -56,5 +56,12 @@
   },
   "jest": {
     "testEnvironment": "jsdom"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "endOfLine": "lf"
   }
 }
